Add background Image2

--- a/GameOne/page1.html
+++ b/GameOne/page1.html
@@ -6,6 +6,7 @@
 
     <title>Zerstöre das Raumschiff</title>
 
+    <link rel="shortcut icon" type="x-icon" href="Images/TIE-Fighter.png">
     <link rel="stylesheet" href="styles.css">
     <script src="app.js"></script>
     <script src="https://kit.fontawesome.com/eaa195accc.js" crossorigin="anonymous"></script>
