--- a/GameOne/page1.html
+++ b/GameOne/page1.html
@@ -6,7 +6,6 @@
 
     <title>Zerstöre das Raumschiff</title>
 
-    <link rel="shortcut icon" type="x-icon" href="Images/TIE-Fighter.png">
     <link rel="stylesheet" href="styles.css">
     <script src="app.js"></script>
     <script src="https://kit.fontawesome.com/eaa195accc.js" crossorigin="anonymous"></script>
@@ -20,6 +19,25 @@
             </a>
         </div>
     </div>
-    <div class="overlay"></div>
+    <div class="overlay">
+        <div class="startform">
+            <form action="">
+                <h2>Zerstöre das Raumschiff</h2>
+                <p>Deine Aufgabe ist es die vorbeifliegenden Raumschiffe zu zerstören. Doch du musst dich entscheiden, unterstützt die Rebellen indem du TIE-Fighter zerstörst, oder hilfst du dem Imperium dabei für Recht und Ordnung in der Galaxis zu sorgen?
+                </p>
+                <div class="select-container">
+                    <div>
+                        <label for="">TIE-Fighter</label>
+                        <input type="radio" name="starship" checked>
+                    </div>
+                    <div>
+                        <label for="" >X-Wing</label>
+                        <input type="radio" name="starship">
+                    </div>
+                </div>
+                <button>Start</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
