Add x-wing to the options

--- a/GameOne/page1.html
+++ b/GameOne/page1.html
@@ -15,7 +15,7 @@
     <div class="background">
         <div class="container">
             <a href="" class="starship">
-                <img src="../Images/TIE-Fighter.png" alt="Bild eines Tie-Jägers">
+                <img src="../Images/x-wing.png" alt="Bild eines Tie-Jägers">
             </a>
         </div>
     </div>
@@ -28,11 +28,11 @@
                 <div class="select-container">
                     <div>
                         <label for="">TIE-Fighter</label>
-                        <input type="radio" name="starship" checked>
+                        <input type="radio" name="starship" value="tie" checked>
                     </div>
                     <div>
                         <label for="" >X-Wing</label>
-                        <input type="radio" name="starship">
+                        <input type="radio" name="starship" value="x-wing">
                     </div>
                 </div>
                 <button>Start</button>
