Make player choose empire or rebellion

--- a/GameOne/page1.html
+++ b/GameOne/page1.html
@@ -7,7 +7,7 @@
     <title>Zerstöre das Raumschiff</title>
 
     <link rel="stylesheet" href="styles.css">
-    <script src="app.js"></script>
+    <script src="app.js" defer></script>
     <script src="https://kit.fontawesome.com/eaa195accc.js" crossorigin="anonymous"></script>
 </head>
 
@@ -15,7 +15,7 @@
     <div class="background">
         <div class="container">
             <a href="" class="starship">
-                <img src="../Images/x-wing.png" alt="Bild eines Tie-Jägers">
+                <img src="" alt="">
             </a>
         </div>
     </div>
@@ -23,15 +23,15 @@
         <div class="startform">
             <form action="">
                 <h2>Zerstöre das Raumschiff</h2>
-                <p>Deine Aufgabe ist es die vorbeifliegenden Raumschiffe zu zerstören. Doch du musst dich entscheiden, unterstützt die Rebellen indem du TIE-Fighter zerstörst, oder hilfst du dem Imperium dabei für Recht und Ordnung in der Galaxis zu sorgen?
+                <p>Deine Aufgabe ist es die vorbeifliegenden Raumschiffe zu zerstören. Doch du musst dich entscheiden, unterstützt die Rebellen, oder hilfst du dem Imperium dabei für Recht und Ordnung in der Galaxis zu sorgen?
                 </p>
                 <div class="select-container">
                     <div>
-                        <label for="">TIE-Fighter</label>
+                        <label for="">Rebellen</label>
                         <input type="radio" name="starship" value="tie" checked>
                     </div>
                     <div>
-                        <label for="" >X-Wing</label>
+                        <label for="" >Imperium</label>
                         <input type="radio" name="starship" value="x-wing">
                     </div>
                 </div>
