Add level dashboard and change width of x-wing

--- a/GameOne/page1.html
+++ b/GameOne/page1.html
@@ -18,6 +18,7 @@
                 <img src="" alt="">
             </a>
         </div>
+        <h3>Level 1</h3>
     </div>
     <div class="overlay">
         <div class="startform">
