--- a/GameOne/page1.html
+++ b/GameOne/page1.html
@@ -14,7 +14,7 @@
 <body>
     <div class="background">
         <div class="container">
-            <a href="page2.html" class="starship">
+            <a href="" class="starship">
                 <img src="" alt="">
             </a>
         </div>
