Improve x-wing looks and add a new level

--- a/GameOne/page1.html
+++ b/GameOne/page1.html
@@ -14,7 +14,7 @@
 <body>
     <div class="background">
         <div class="container">
-            <a href="" class="starship">
+            <a href="" class="starship main">
                 <img src="" alt="">
             </a>
         </div>
