--- a/startseite.html
+++ b/startseite.html
@@ -3,21 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Star Wars Games</title>
+
+    <title>Star Wars Spiele</title>
 
     <link rel="stylesheet" href="startSeiteStyles.css">
+    <script src="startSeiteJavascript.js" defer></script>
+    <script src="https://kit.fontawesome.com/eaa195accc.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="wrapper">
-        <div class="scroll-text">
-            <h1>STAR WARS</h1>
-            <h3>Scrolling Text</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nostrum ex maxime quod, expedita exercitationem, tenetur corrupti excepturi similique nemo odio ab quibusdam laboriosam quaerat pariatur modi mollitia sapiente accusantium earum aliquid quas! Sed numquam, praesentium labore veniam culpa quo.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nostrum ex maxime quod, expedita exercitationem, tenetur corrupti excepturi similique nemo odio ab quibusdam laboriosam quaerat pariatur modi mollitia sapiente accusantium earum aliquid quas! Sed numquam, praesentium labore veniam culpa quo.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nostrum ex maxime quod, expedita exercitationem, tenetur corrupti excepturi similique nemo odio ab quibusdam laboriosam quaerat pariatur modi mollitia sapiente accusantium earum aliquid quas! Sed numquam, praesentium labore veniam culpa quo.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nostrum ex maxime quod, expedita exercitationem, tenetur corrupti excepturi similique nemo odio ab quibusdam laboriosam quaerat pariatur modi mollitia sapiente accusantium earum aliquid quas! Sed numquam, praesentium labore veniam culpa quo.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nostrum ex maxime quod, expedita exercitationem, tenetur corrupti excepturi similique nemo odio ab quibusdam laboriosam quaerat pariatur modi mollitia sapiente accusantium earum aliquid quas! Sed numquam, praesentium labore veniam culpa quo.</p>
-        </div>
-    </div>
+    <button><i class="fa-solid fa-arrow-right"></i></button>
+    <button>telkjöalsj</button>
 </body>
 </html>
