--- a/GameTwo/game.html
+++ b/GameTwo/game.html
@@ -7,8 +7,20 @@
     <title>Schere-Stein-Papier</title>
     <link rel="stylesheet" href="styles.css">
     <script src="app.js" defer></script>
+    <script src="https://kit.fontawesome.com/eaa195accc.js" crossorigin="anonymous"></script>
 </head>
-<body>
-    
+<body class="second-body">
+    <div class="container">
+        <div class="button-container">
+            <Button class="schere option"><i class="fa-solid fa-scissors"></i></Button>
+            <Button class="stein option"><i class="fa-solid fa-hill-rockslide"></i></Button>
+            <Button class="papier option"><i class="fa-solid fa-newspaper"></i></Button>
+        </div>
+        <div class="scoreboard">
+            <div class="score">Deine Punkte: <span class="your-points">1</span></div>
+            <div class="score">Jabba`s Punkte: <span class="jabba-points">2</span></div>
+            <div class="score">Runden: <span class="rounds">3</span></div>
+        </div>
+    </div>
 </body>
 </html>
