Add logic to play rounds but dont determine winner

--- a/GameTwo/game.html
+++ b/GameTwo/game.html
@@ -12,14 +12,20 @@
 <body class="second-body">
     <div class="container">
         <div class="button-container">
-            <Button class="schere option"><i class="fa-solid fa-scissors"></i></Button>
-            <Button class="stein option"><i class="fa-solid fa-hill-rockslide"></i></Button>
-            <Button class="papier option"><i class="fa-solid fa-newspaper"></i></Button>
+            <button class="schere option" value="schere">
+                <i class="fa-solid fa-scissors"></i>
+            </button>
+            <button class="stein option" value="stein">
+                <i class="fa-solid fa-hill-rockslide"></i>
+            </button>
+            <button class="papier option" value="papier">
+                <i class="fa-solid fa-newspaper"></i>
+            </button>
         </div>
         <div class="scoreboard">
-            <div class="score">Deine Punkte: <span class="your-points">1</span></div>
-            <div class="score">Jabba`s Punkte: <span class="jabba-points">2</span></div>
-            <div class="score">Runden: <span class="rounds">3</span></div>
+            <div class="score">Deine Punkte: <span class="your-points">0</span></div>
+            <div class="score">Jabba`s Punkte: <span class="jabba-points">0</span></div>
+            <div class="score">Runden: <span class="rounds">0</span></div>
         </div>
     </div>
 </body>
