--- a/GameTwo/game.html
+++ b/GameTwo/game.html
@@ -11,6 +11,7 @@
 </head>
 <body class="second-body">
     <div class="container">
+        <div class="round-winner"></div>
         <div class="button-container">
             <button class="schere option" value="schere">
                 <i class="fa-solid fa-scissors"></i>
