--- a/GameTwo/won.html
+++ b/GameTwo/won.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="lost">
-you won
+<body class="won">
+    <div class="han-message">
+        <p>Han Solo dankt dir für deinen Einsatz. <br>Möge die Macht mit dir sein!</p>
+    </div>
 </body>
 </html>
