Finish lost.html and add homebutton to every gameTwo page

--- a/GameTwo/game.html
+++ b/GameTwo/game.html
@@ -10,6 +10,7 @@
     <script src="https://kit.fontawesome.com/eaa195accc.js" crossorigin="anonymous"></script>
 </head>
 <body class="second-body">
+    <a href="../startseite.html"><i class="fa-solid fa-house"></i></a>
     <div class="container">
         <div class="round-winner"></div>
         <div class="button-container">
