--- a/GameTwo/index.html
+++ b/GameTwo/index.html
@@ -6,9 +6,11 @@
     
     <title>Schere-Stein-Papier</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/eaa195accc.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="first-body">
+    <a href="../startseite.html"><i class="fa-solid fa-house"></i></a>
     <div class="text-container">
         <div class="text">
             <h3>Rette den Millennium Falcon</h3>
