--- a/GameTwo/lost.html
+++ b/GameTwo/lost.html
@@ -6,9 +6,14 @@
     
     <title>Verloren</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/eaa195accc.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="lost">
-
+    <a href="../startseite.html"><i class="fa-solid fa-house"></i></a>
+    <div class="han-message">
+        <h2>Verloren</h2>
+        <p>Du hast verloren, plötzlich öffnet sich eine Falltür unter dir und du siehst dich im Angesicht des Rancors wieder.</p>
+    </div>
 </body>
 </html>
