--- a/GameTwo/won.html
+++ b/GameTwo/won.html
@@ -6,11 +6,14 @@
     
     <title>Gewonnen</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/eaa195accc.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="won">
+    <a href="../startseite.html"><i class="fa-solid fa-house"></i></a>
     <div class="han-message">
-        <p>Han Solo dankt dir für deinen Einsatz. <br>Möge die Macht mit dir sein!</p>
+        <h2>Gewonnen</h2>
+        <p>Han Solo dankt dir für deinen Einsatz und möge die Macht mit dir sein!</p>
     </div>
 </body>
 </html>
