--- a/GameOne/page1.html
+++ b/GameOne/page1.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <a href="../startseite.html"><i class="fa-solid fa-house"></i></a>
     <div class="background">
         <div class="container">
             <a href="" class="starship main">
