Create finish.html basic styles

--- a/GameOne/finish.html
+++ b/GameOne/finish.html
@@ -11,7 +11,7 @@
 
 <body class="finish">
     <a href="../startseite.html"><i class="fa-solid fa-house"></i></a>
-    <div class="han-message">
+    <div class="message">
         <h2>Herzlichen Glückwunsch</h2>
         <p>Du hast es geschafft und alle Sternenjäger zerstört, drücke <a href="page1.html">WIEDERHOLEN</a>, um erneut zu spielen, oder drücke <a href="../startseite.html">STARTSEITE</a>, um zur Strartseite zu gelangen.</p>
     </div>
