Finish the finish.html page

--- a/GameOne/finish.html
+++ b/GameOne/finish.html
@@ -13,7 +13,11 @@
     <a href="../startseite.html"><i class="fa-solid fa-house"></i></a>
     <div class="message">
         <h2>Herzlichen Glückwunsch</h2>
-        <p>Du hast es geschafft und alle Sternenjäger zerstört, drücke <a href="page1.html">WIEDERHOLEN</a>, um erneut zu spielen, oder drücke <a href="../startseite.html">STARTSEITE</a>, um zur Strartseite zu gelangen.</p>
+        <p>Du hast es geschafft, alle Sternenjäger zu zerstören. Nun kannst du dich entscheiden, ob du noch eine Runde spielst oder zurück zur Startseite gehst.</p>
+        <div class="button-div">
+            <a href="page1.html"><i class="fa-solid fa-repeat"></i></a>
+            <a href="../startseite.html"><i class="fa-solid fa-house box-home"></i></a>
+        </div>  
     </div>
 </body>
 </html>
