--- a/startseite.html
+++ b/startseite.html
@@ -7,11 +7,20 @@
     <title>Star Wars Spiele</title>
 
     <link rel="stylesheet" href="startSeiteStyles.css">
-    <script src="startSeiteJavascript.js" defer></script>
     <script src="https://kit.fontawesome.com/eaa195accc.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <button><i class="fa-solid fa-arrow-right"></i></button>
-    <button>telkjöalsj</button>
+    <div class="container">
+        <a class="game-one" href="GameOne/page1.html">Zerstöre das Raumschiff</a>
+        <div class="instructions">
+            <h1>Star Wars</h1>
+            <h3>Es war einmal vor langer Zeit in einer weit, weit entfernten Galaxis...</h3>
+            <p>Die Galaxis ist im Chaos versunken. Die Rebellen und das Imperium liefern sich schwere Gefechte um die Vorheerschaft.</p>
+            <p>Für friedliche Bürger wie dich ist es immer schwieriger geworden rechtschaffenden Tätigkeiten nach zugehen.</p>
+            <p>So wirst auch die bei diesen Spielen in die Schlacht hinein gezogen. Währenddessen wirst du in an die entlegensten Orte der Galaxis gelangen, um verschiedenen Patein zu helfen...</p>
+        </div>
+        <a class="game-two" href="GameTwo/index.html">Schere-Stein-Papier</a>
+    </div>
 </body>
 </html>
