change main html name

--- a/GameTwo/lost.html
+++ b/GameTwo/lost.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="lost">
-    <a href="../startseite.html"><i class="fa-solid fa-house"></i></a>
+    <a href="../index.html"><i class="fa-solid fa-house"></i></a>
     <div class="han-message">
         <h2>Verloren</h2>
         <p>Du hast verloren, plötzlich öffnet sich eine Falltür unter dir und du siehst dich im Angesicht des Rancors wieder.</p>
