--- a/GameTwo/won.html
+++ b/GameTwo/won.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="won">
-    <a href="../startseite.html"><i class="fa-solid fa-house"></i></a>
+    <a href="../index.html"><i class="fa-solid fa-house"></i></a>
     <div class="han-message">
         <h2>Gewonnen</h2>
         <p>Han Solo dankt dir für deinen Einsatz und möge die Macht mit dir sein!</p>
