--- a/GameTwo/index.html
+++ b/GameTwo/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="first-body">
-    <a href="../startseite.html"><i class="fa-solid fa-house"></i></a>
+    <a href="../index.html"><i class="fa-solid fa-house"></i></a>
     <div class="text-container">
         <div class="text">
             <h3>Rette den Millennium Falcon</h3>
